ToolchainWithLint("armv7-apple-ios") {
  toolchain_type = "mac"

  cc = "clang"
  cxx = "clang++"
  ar = "ar"
  ld = cxx

  source_extensions_ld = ["ld"]

  toolchain_args = {
    current_cpu = "arm"
    current_os = "ios"
    current_platform = "armv7-apple-ios"

    ios_deployment_target = "9.0"
  }
}
