ToolchainWithLint("armv7-linux-gnueabihf") {
  toolchain_type = "gcc"
  toolprefix = "arm-linux-gnueabihf-"

  cc = "${toolprefix}gcc"
  cxx = "${toolprefix}g++"
  ar = "${toolprefix}ar"
  ld = cxx

  source_extensions_ld = ["ld"]

  toolchain_args = {
    pkg_config = "armv7-linux-gnueabihf-pkg-config"

    current_cpu = "arm"
    current_os = "linux"
    current_platform = "armv7-linux-gnueabihf"
  }
}
