ToolchainWithLint("armv7a-ghs-eabihf") {
  toolchain_type = "ghs"

  cc = "ccarm"
  cxx = "cxarm"
  ar = cxx
  ld = cxx

  source_extensions_asm = ["asm", "s", "S", "arm"]
  source_extensions_ld = ["ld"]

  toolchain_args = {
    pkg_config = "armv7a-ghs-eabihf-pkg-config"

    current_cpu = "arm"
    current_os = "tx"
    current_platform = "armv7a-ghs-eabihf"
  }
}
